[package]
name = "driver_async"
version = "0.0.3"
authors = ["AndrewGi <andrew@gilbrough.com>"]
edition = "2018"
license = "GPL-3.0-only"
description = "async backend for `btle`, `bluetooth_mesh` and `usbw` crates."
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["tokio_asyncs"]
tokio_asyncs = ["tokio", "std"]
async-std_asyncs = ["std", "async-std/std"]
std = ["futures-io/std", "futures-util/std", "futures-executor/std"]

[dependencies]
futures-core = {version = "0.3", default_features = false, features=["alloc"]}
futures-sink = {version = "0.3", default_features = false}
futures-util = {version = "0.3", default_features = false}
futures-executor = {version = "0.3", default_features = false}
tokio = {version = "0.3", optional = true, default_features = false, features = ["time", "sync", "rt", "rt-multi-thread", "stream"]}
async-std = {version = "1.5.0", optional =true, default_features = false}
futures-io = {version = "0.3", optional = true}